--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mpvue": "^1.0.10",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
