--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^0.28.11",
     "mpvue": "^1.0.10",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
