--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^0.28.11",
+    "lodash": "^4.17.10",
     "mpvue": "^1.0.10",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
